<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fadeScrollbars="false"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            style="@style/TakwerxButton"
            android:id="@+id/plss_manage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plss_manage_data" />

        <Button
            style="@style/TakwerxButton"
            android:id="@+id/plss_find"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plss_find" />

        <Button
            style="@style/TakwerxButton"
            android:id="@+id/plss_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plss_show" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="8dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/plss_township_color" />

            <Button
                android:id="@+id/plss_township_color"
                android:layout_width="64dp"
                android:layout_height="40dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="4dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/plss_section_color" />

            <Button
                android:id="@+id/plss_section_color"
                android:layout_width="64dp"
                android:layout_height="40dp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
