<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plss_meridian" />

    <Button
        style="@style/TakwerxButton"
        android:id="@+id/find_meridian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plss_township_label"
            android:paddingRight="6dp" />

        <EditText
            android:id="@+id/find_twp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="19" />

        <Button
            style="@style/TakwerxButton"
            android:id="@+id/find_twp_dir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="72dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="6dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plss_range_label"
            android:paddingRight="6dp" />

        <EditText
            android:id="@+id/find_rng"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="25" />

        <Button
            style="@style/TakwerxButton"
            android:id="@+id/find_rng_dir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="72dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/find_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp" />

</LinearLayout>
